Using re instead of bs4

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 testpaths = tests
 addopts = --disable-socket --cov-report term-missing --cov=articles
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
