--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ wheels/
 MANIFEST
 
 # IntelliJ
-.idea/workspace.xml
+.idea/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
