Removed old parser

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 testpaths = tests
-addopts = --disable-socket --cov-report term-missing --cov=articles
+addopts = --disable-socket --cov=articles
