--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "==2.19.1"
+requests = ">=2.20.0"
 pytest = "==3.8.0"
 pytest-socket = "==0.3.1"
 pytest-cov = "==2.6.0"
