--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,7 @@ requests = ">=2.20.0"
 pytest = "==3.8.0"
 pytest-socket = "==0.3.1"
 pytest-cov = "==2.6.0"
-"beautifulsoup4" = "==4.6.3"
-tomd = "==0.1.3"
+beautifulsoup4 = "==4.6.3"
 
 [dev-packages]
 
