--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,5 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            pylint articles
+            flake8 articles
             pytest
